scalable frontpage and footer no longer overlaps

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -16,6 +16,8 @@
 }
 
 body {
+    display: flex;
+    flex-direction: column-reverse;
     font-size: 18px;
     padding: 0;
     background-color: $background-secondary;
@@ -96,7 +98,7 @@ label {
 /* Navigation */
 // Yup
 nav {
-    position: fixed;
+    flex: 0 0 100px;
     bottom: 0;
     left: 0;
     width: 100%;
@@ -202,11 +204,12 @@ nav {
         #log-button {
             display: block;
             margin: 0 auto;
-
+            margin-bottom: 2rem;
         }
 
         #calendar-button {
             display: none;
+            margin-bottom: 2rem;
         }
 
         //}
